patch : fix rtl view for CTAs and Spotlight on featured items - also some fixes related to image/feature styling in featured item where off behaviour and sizing was causing misalignment of image

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_featureCard.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_featureCard.scss
@@ -8,6 +8,8 @@
         justify-content: space-between;
     }
 
+
+
     &__header {
         background-color: $stockport-pink;
         padding: 0.75em;
@@ -22,10 +24,10 @@
     &__wrapper {
         display: flex;
         flex-direction: column;
-        margin-left: 25px;
-        margin-right: 25px;
 
         @media #{$desktop} {
+            margin-left: 25px;
+            margin-right: 25px;
             flex: 1;
             flex-grow: 1;
             flex-basis: 0;
@@ -36,6 +38,11 @@
         }
     }
 
+    &__wrapper:first-child {
+        @media #{$mobile, $tablet} {
+            margin-bottom: 2em;
+        }
+    }
 
     &__content {
         padding: 1em;
